--- a/APTM Project/app/src/main/res/layout/activity_location_component.xml
+++ b/APTM Project/app/src/main/res/layout/activity_location_component.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,6 +8,7 @@
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        mapbox:mapbox_cameraZoom="12" />
+        mapbox:mapbox_cameraZoom="15"
+        />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
