--- a/project_homepage_final/style.css
+++ b/project_homepage_final/style.css
@@ -203,8 +203,8 @@ legend {
 }
 
 .price-item-content2{
-  line-height: 30px;
-  margin-top: 30px;
+  line-height: 29px;
+  font-size: 14px;
 }
 
 .price-item-content3{
